--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #0a0a0a;
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,9 +19,42 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
-@layer componentes {
+@layer components {
   .container {
     @apply mx-auto max-w-7xl px-4;
+  }
+
+  .botao {
+    @apply flex justify-center items-center;
+    @apply gap-2 rounded-md px-9 h-9;
+    @apply text-sm font-semibold;
+  }
+
+  .botao.azul {
+    @apply bg-blue-500 text-white;
+  }
+
+  .botao.azul:hover {
+    @apply bg-blue-600;
+  }
+
+  .botao.vermelho {
+    @apply bg-red-500 text-white;
+  }
+
+  .botao.vermelho:hover {
+    @apply bg-red-600;
+  }
+
+  .botao.verde {
+    @apply bg-green-500 text-white;
+  }
+
+  .botao.verde:hover {
+    @apply bg-green-600;
+  }
+
+  input {
+    color-scheme: dark;
   }
 }
